# OrigamiCAD

./: .gitignore  cad_export.py  cadder.py  cadder_test.py  cadder_visualization.py  pyproject.toml  simple_hexagon.py  two_d_drawer.py
examples/: __init__.py  hexagon_example_2d.py  hexagon_example_3d.py  interactive_simple_hexagon.py  simple_hexagon.py  simple_hexagon_example_2d.py  simple_hexagon_example_3d.py  simple_hexagon_four_layer_stack.py  simple_hexagon_projection_dxf.py
main/: simple_hexagon_insertion.py
origamicad/: __init__.py
origamicad/core/: __init__.py  cadder.py  simple_hexagon_mixin.py  two_d_drawer.py  visualization.py
origamicad/io/: __init__.py  cad_export.py  dxf_export.py
origamicad/patterns/: __init__.py  hexagon_packaging.py  simple_hexagon.py
origamicad/patterns/hexagon/: __init__.py  insertion_simulation.py  kinematics.py  layout.py  metadata.py  stacking.py
